--- a/FrontEnd/src/Contact/Styling/Contact.scss
+++ b/FrontEnd/src/Contact/Styling/Contact.scss
@@ -5,29 +5,23 @@
 * Browsers: last 4 version
 */
 
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #contactContainer {
+  min-height: 100vh;
   padding: 5% 0;
   overflow: hidden;
   display: -ms-grid;
   display: grid;
-          grid-template-areas:
+  grid-template-areas:
     "logo cta ."
     "  .  cta contact";
   -ms-grid-rows: 2fr 1fr;
@@ -35,7 +29,7 @@ $blue-logo-color: #00c2cb;
   -ms-grid-columns: 1fr 2fr 1fr;
   grid-template-columns: 1fr 2fr 1fr;
   .content {
-    font-family: "Courier Prime", monospace;
+    font-family: 'Indie Flower', cursive;
   }
   .titles {
     font-family: "Playfair Display", serif;
@@ -48,6 +42,7 @@ $blue-logo-color: #00c2cb;
     padding: 0;
     margin: 0 auto;
     z-index: 1;
+    margin-top: 50px;
   }
   & > #info {
     -ms-grid-row: 2;
@@ -62,15 +57,27 @@ $blue-logo-color: #00c2cb;
       margin-bottom: 10px;
     }
   }
+  #backgroundImg:before {
+    content: "";
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    background-color: rgb(13,17,40);
+    top: 0;
+    left: 0;
+    opacity: 0.69;
+    z-index: 0;
+  }
   & > #backgroundImg {
     background-image: url("../../images/contact.png");
     background-repeat: no-repeat;
     background-size: contain;
-    width: 600px;
-    height: 300px;
-    position: fixed;
+    background-size: 100% 100%;
+    min-width:100%;
+    min-height: 100vh;
+    position: absolute;
     bottom: 0px;
-    left:0;
+    left: 0;
     z-index: 0;
   }
 }
@@ -85,6 +92,7 @@ $blue-logo-color: #00c2cb;
   width: 50vw;
   grid-area: cta;
   font-size: 1.25em;
+  margin-top: 50px;
 
   & > p,
   h1,
@@ -98,13 +106,12 @@ $blue-logo-color: #00c2cb;
   }
 
   #desc {
-    margin: 2vh 0;
+    margin: 2vh 0 5vh 0;
     text-align: justify;
     font-size: 1em;
   }
   #inputs {
-    border: 1px solid $blue-logo-color;
-    padding: 0 10px 15px 10px;
+    padding-bottom: 15px;
     & > label {
       text-align: left;
     }
@@ -117,7 +124,7 @@ $blue-logo-color: #00c2cb;
       background: $white-background;
       overflow: auto;
       padding: 2px;
-      color:black;
+      color: black;
       margin: 5px 0;
     }
     textarea[name="body"] {
@@ -133,18 +140,17 @@ $blue-logo-color: #00c2cb;
     & > button {
       height: 2.5em;
       width: 6em;
-      background-color: $blue-logo-color;
-      border-radius: 15%;
-      color:$black-text;
+      background-color: $black-text;
+      color: $white-background;
       font-size: 0.8em;
+      border: 1px solid white;
     }
 
-    & > button:hover{
-      -webkit-transform: scale(0.9);
-          -ms-transform: scale(0.9);
-              transform: scale(0.9);
+    & > button:hover {
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      transform: scale(1.1);
       border: 1px solid $white-background;
-
     }
   }
 }
@@ -156,11 +162,10 @@ $blue-logo-color: #00c2cb;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     margin: 0 1em;
-    padding:0;
-    min-height: calc(100vh - 50px);
+    padding: 0;
     & > #logo {
       margin: 0;
       padding: 0;
@@ -168,8 +173,9 @@ $blue-logo-color: #00c2cb;
     & > #callToAction {
       width: calc(100vw - 2em - 10%);
       -webkit-box-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      margin-top: 0;
     }
     & > #info {
       height: 90px;
