--- a/FrontEnd/src/NavBar/Styling/NavBar.scss
+++ b/FrontEnd/src/NavBar/Styling/NavBar.scss
@@ -5,11 +5,16 @@
 * Browsers: last 4 version
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 $blue-logo-color: #00c2cb;
 .navBar {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 50px;
   .content{
-    font-family: "Courier Prime", monospace;
+    font-family: 'Indie Flower', cursive;
   }
   .titles{
     font-family: "Playfair Display", serif;
