--- a/FrontEnd/src/Projects/Styling/Projects.css
+++ b/FrontEnd/src/Projects/Styling/Projects.css
@@ -4,7 +4,7 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 .outerContainer:after {
   content: "";
   width: 100%;
@@ -18,17 +18,19 @@
 }
 
 .outerContainer {
-  min-height: calc(100vh - 50px);
+  min-height: 100vh;
+  padding-bottom: 5px;
   background-image: url("../../images/test.png");
   background-size: 100% 100%;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   position: relative;
+  z-index: 0;
 }
 
 .outerContainer .content {
-  font-family: "Courier Prime", monospace;
+  font-family: 'Indie Flower', cursive;
 }
 
 .outerContainer .titles {
@@ -38,6 +40,7 @@
 .outerContainer > .projectsContainer {
   position: relative;
   z-index: 1;
+  padding-top: 50px;
 }
 
 .outerContainer > .projectsContainer > #title {
