--- a/FrontEnd/src/SkillsContainer/Styling/Skills.css
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.css
@@ -4,7 +4,7 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&family=Playfair+Display:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 .skillsContainer:before {
   content: "";
   min-width: 100%;
@@ -18,20 +18,20 @@
 }
 
 .skillsContainer {
-  z-index: 1;
+  z-index: 0;
   background: #0f0e0c url("../../images/astro.png") no-repeat;
   background-size: 100% 100%;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  min-height: calc(100vh - 50px);
+  min-height: 100vh;
   color: #f1f1f1;
   position: relative;
-  padding-bottom: .1em;
+  padding-bottom: 0.1em;
 }
 
 .skillsContainer .content {
-  font-family: "Courier Prime", monospace;
+  font-family: 'Indie Flower', cursive;
   text-shadow: -2px 2px 4px #0f0e0c;
 }
 
@@ -39,6 +39,10 @@
   font-family: "Playfair Display", serif;
   position: relative;
   text-shadow: -2px 2px 4px #0f0e0c;
+}
+
+.skillsContainer > .title {
+  padding-top: 50px;
 }
 
 .skillsContainer > .skillGrouping {
