--- a/FrontEnd/src/SocialMedia/Styling/socialMedia.scss
+++ b/FrontEnd/src/SocialMedia/Styling/socialMedia.scss
@@ -7,6 +7,11 @@
         margin-right: 10px;
         color: #f1f1f1;
       }
+      &>.socialIcon:hover{
+        -webkit-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+                transform: scale(1.2);
+      }
     }
   }
 }
