changing some fonts

--- a/FrontEnd/src/About/Styling/about.scss
+++ b/FrontEnd/src/About/Styling/about.scss
@@ -4,9 +4,6 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-
-
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
@@ -42,7 +39,7 @@ $blue-logo-color: #00c2cb;
     font-size: 3em;
   }
   .content {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Noto Sans', sans-serif;
     line-height: 1.5em;
   }
   & > #title {
