--- a/FrontEnd/src/NavBar/Styling/NavBar.scss
+++ b/FrontEnd/src/NavBar/Styling/NavBar.scss
@@ -5,7 +5,6 @@
 * Browsers: last 4 version
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 $blue-logo-color: #00c2cb;
 .navBar {
   position: absolute;
@@ -14,7 +13,7 @@ $blue-logo-color: #00c2cb;
   width: 100%;
   height: 50px;
   .content{
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Noto Sans', sans-serif;
   }
   .titles{
     font-family: "Playfair Display", serif;
