--- a/FrontEnd/src/SkillsContainer/Styling/Skills.css
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.css
@@ -4,7 +4,6 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
 .skillsContainer:before {
   content: "";
   min-width: 100%;
@@ -31,7 +30,7 @@
 }
 
 .skillsContainer .content {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Noto Sans', sans-serif;
   text-shadow: -2px 2px 4px #0f0e0c;
 }
 
@@ -64,9 +63,6 @@
   width: -moz-fit-content;
   width: fit-content;
   margin: 7px 10px;
-  -webkit-box-flex: 1;
-  -ms-flex: 1 4 50vw;
-  flex: 1 4 50vw;
   font-size: 1.3em;
   position: relative;
   z-index: 1;
