--- a/FrontEnd/src/SkillsContainer/Styling/Skills.scss
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.scss
@@ -4,9 +4,6 @@
 * Autoprefixer: v9.7.6
 * Browsers: last 4 version
 */
-
-@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playfair+Display:wght@700&display=swap");
-
 $black-text: #0f0e0c;
 $white-background: #f1f1f1;
 $blue-logo-color: #00c2cb;
@@ -32,7 +29,7 @@ $blue-logo-color: #00c2cb;
   position: relative;
   padding-bottom: 0.1em;
   .content {
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Noto Sans', sans-serif;
     text-shadow: -2px 2px 4px $black-text;
   }
   .titles {
@@ -60,13 +57,10 @@ $blue-logo-color: #00c2cb;
       width: -moz-fit-content;
       width: fit-content;
       margin: 7px 10px;
-      -webkit-box-flex: 1;
-      -ms-flex: 1 4 50vw;
-      flex: 1 4 50vw;
       font-size: 1.3em;
       position: relative;
       z-index: 1;
-
+      
       & > .skill {
         color: $blue-logo-color;
         font-weight: 600;
