--- a/FrontEnd/src/Home/styling/home.scss
+++ b/FrontEnd/src/Home/styling/home.scss
@@ -98,6 +98,7 @@ $blue-logo-color: #00c2cb;
         position: relative;
         background-color: $white-background;
         width: 150px;
+        margin-top: 1em;
         & a {
           text-decoration: none;
           color: $black-text;
