--- a/FrontEnd/src/Home/styling/home.css
+++ b/FrontEnd/src/Home/styling/home.css
@@ -108,6 +108,7 @@
   position: relative;
   background-color: #f1f1f1;
   width: 150px;
+  margin-top: 1em;
 }
 
 .home > #homepage > .callToAction > .CTAButton a {
