--- a/FrontEnd/src/Projects/Styling/Projects.css
+++ b/FrontEnd/src/Projects/Styling/Projects.css
@@ -83,9 +83,17 @@
   line-height: 1.5em;
 }
 
-.outerContainer > .projectsContainer > .activeProject > .project > #info > #graph {
-  margin: 10px auto;
+.outerContainer > .projectsContainer > .activeProject > .project > #info > #gitIcon {
+  font-size: 1.5em;
   display: block;
+  text-align: center;
+  color: #f1f1f1;
+  margin: 1em 0;
+}
+
+.outerContainer > .projectsContainer > .activeProject > .project > #info > #gitIcon:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .outerContainer > .projectsContainer > .activeProject > .project > #info > #skills {
