--- a/FrontEnd/src/Projects/Styling/Projects.scss
+++ b/FrontEnd/src/Projects/Styling/Projects.scss
@@ -70,10 +70,17 @@ $blue-logo-color: #00c2cb;
           & > #desc {
             line-height: 1.5em;
           }
-          & > #graph {
-            margin: 10px auto;
-            display: block;
+          & > #gitIcon {
+            font-size: 1.5em;
+            display: block;    
+            text-align: center;    
+            color:$white-background;    
+            margin: 1em 0;
           }
+          & > #gitIcon:hover {
+            transform: scale(1.1);  
+          }
+
           & > #skills {
             display: -webkit-box;
             display: -ms-flexbox;
