--- a/FrontEnd/src/SkillsContainer/Styling/Skills.css
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.css
@@ -41,7 +41,7 @@
 }
 
 .skillsContainer > .title {
-  padding-top: 50px;
+  padding-top: 10vh;
 }
 
 .skillsContainer > .skillGrouping {
@@ -55,6 +55,7 @@
   justify-content: space-evenly;
   margin-top: auto;
   position: relative;
+  margin-top: 5vh;
 }
 
 .skillsContainer > .skillGrouping > .skillList {
@@ -62,10 +63,13 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 7px 10px;
+  margin: 15px 10px;
   font-size: 1.3em;
   position: relative;
   z-index: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40%;
+          flex: 1 1 40%;
 }
 
 .skillsContainer > .skillGrouping > .skillList > .skill {
@@ -75,6 +79,13 @@
   position: relative;
   z-index: 1;
   margin-bottom: 2px;
+}
+
+.skillsContainer > #bottom_images {
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  width: 100%;
 }
 
 .skillsContainer > #bottom_images > #logos {
@@ -87,6 +98,5 @@
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   font-size: 1.5em;
-  position: relative;
 }
 /*# sourceMappingURL=Skills.css.map */
