removed bg on skills page

--- a/FrontEnd/src/SkillsContainer/Styling/Skills.scss
+++ b/FrontEnd/src/SkillsContainer/Styling/Skills.scss
@@ -20,7 +20,7 @@ $blue-logo-color: #00c2cb;
 }
 .skillsContainer {
   z-index: 0;
-  background: #0f0e0c url("../../images/astro.png") no-repeat;
+  // background: #0f0e0c url("../../images/astro.png") no-repeat;
   background-size: 100% 100%;
   object-fit: cover;
   width: 100%;
